fixed uses dropdown in other types.  It was getting positioned offscreen

--- a/style.css
+++ b/style.css
@@ -118,4 +118,4 @@ ul {padding:0; margin:0;}
 
 .dynamic {position:absolute; width:50px; height:50px; background:blue; bottom:0; left:0;}
 
-
+.btn-toolbar {position:relative;}
